--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My ToDo React</title>
+	<title>My ToDo React v2</title>
 </head>
 <body>
   <div id="app"></div>
